src/styles/App.css
div#siaApp {
  font-family: "Segoe UI", arial, sans-serif;
  max-width: 20%;
}

.incident-container {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
}

.incident-row {
  border: 1px ;
  display: flex;
  flex: 1;
	padding-left: 2%;
  padding-right: 2%;
}

.incident-col {
  max-width: 100%;
  box-sizing: border-box;
  border: 1px ;
  display: flex;
  flex: 1;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
  padding: 2%;
}

.incident-steplabel {
	display: flex;
	flex-direction: column;
  justify-content: space-between;
}

.incident-EventFilter {
  display: flex;
  flex: 1;
  justify-content: space-between;
  align-items: center;
  padding-top: 1%;
}

.incident-EventFooter {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: space-between;
  padding: 2%;
}

@media (max-width: 1800px) {

  div#siaApp {
    max-width: 25%;
  }

}

@media (max-width: 1600px) {

  div#siaApp {
    max-width: 30%;
  }

}

@media (max-width: 1200px) {

  div#siaApp {
    max-width: 40%;
  }

}

@media (max-width: 920px) {

  div#siaApp {
    max-width: 50%;
  }

}

@media (max-width: 768px) {

  div#siaApp {
    max-width: 75%;
  }

}

@media (max-width: 480px) {

  div#siaApp {
    max-width: 100%;
  }

  .incident-container {
    display: flex;
    flex-wrap: nowrap;
  }

  .incident-row {
    display: flex;
    flex: 1;
    flex-direction: column;
    flex-wrap: nowrap;
  }

  .incident-col {
    display: flex;
    flex: 1;
    flex-wrap: nowrap;
  }

}

::-ms-clear {
  display: none;
}

@keyframes yellowfade {
  0% {
    background: yellow;
  }
  20% {
    background: yellow;
  }
  100% {
    background: transparent;
  }
}

